update About Me paragraph

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
   <section>
     <h2 id="aboutme">About Me</h2>
-    <p>Hi, I'm Andrea. I'm currently a junior at Fairview High School. I volunteer at my local hospital. At the moment, I am an intern at <a href="http://phet.colorado.edu/">PhET Interactive Simulations</a>, and I am developing the <a href="http://www.colorado.edu/physics/phet/dev/html/projectile-motion/1.0.0-dev.1/projectile-motion_en.html">projectile motion simulation</a>. I'm interested in policy debate, machine learning, geometry, and probability.</p>
+    <p>Hi, I'm Andrea. I graduated from Fairview High School, and I will be attending MIT next year. At the moment, I am an intern at <a href="http://phet.colorado.edu/">PhET Interactive Simulations</a>. There, I developed the <a href="https://phet.colorado.edu/sims/html/projectile-motion/latest/projectile-motion_en.html">projectile motion simulation</a>. I'm interested in policy debate, machine learning, geometry, and probability.</p>
     <a href="https://github.com/andrea-phet">GitHub</a> | <a href="https://www.goodreads.com/user/show/51677921-andrea">Goodreads</a>
 
     <h2 id="experience">Experience</h2>
