--- a/index.html
+++ b/index.html
@@ -29,17 +29,6 @@
     <div class="resume">
       <table>
         <tr>
-        <td><a href="https://www.avistahospital.org/AVH/Home/"><img src="avista_logo.png" alt="Avista Logo"></a></td>
-        <td>
-          <h4>Jan. 2015 - Present</h4>
-          <p>As a third year volunteer at my local hospital in Louisville, Colorado, I have worked at the Information Desk, Nutrition Services, and (currently) New Life. I bring a smile and offer my time for about three to four hours each week to help with anything, including delivering dinner to patients' rooms, monitoring security through the front doors, and walking people to their rooms.</p>
-        </td>
-        </tr>
-      </table>
-    </div>
-    <div class="resume">
-      <table>
-        <tr>
         <td><a href="https://phet.colorado.edu"><img src="phet_logo.png" alt="PhET Logo"></a></td>
         <td>
           <h4>May. 2016 - Present</h4>
@@ -51,10 +40,21 @@
     <div class="resume">
       <table>
         <tr>
+        <td><a href="https://www.avistahospital.org/AVH/Home/"><img src="avista_logo.png" alt="Avista Logo"></a></td>
+        <td>
+          <h4>Jan. 2015 - May. 2018</h4>
+          <p>As a volunteer at my local hospital in Louisville, Colorado, I worked at the Information Desk, Nutrition Services, and New Life. I brought a smile and offered my time for three to four hours each week to help with anything, including delivering dinner to patients' rooms, monitoring security through the front doors, and walking people to their rooms.</p>
+        </td>
+        </tr>
+      </table>
+    </div>
+    <div class="resume">
+      <table>
+        <tr>
         <td><a href="https://www.fairviewhs.org/sites/debate"><img src="fairview_logo.png" alt="Fairview Logo"></a></td>
         <td>
-          <h4>Oct. 2015 - Present</h4>
-          <p>This is the second year I have been a captain of the speech and debate club at my high school. I support coaches in leading a team of over sixty debaters. I have been a policy debate captain both years, so I designed and taught a yearlong course to introduce new debaters and fostered them throughout varsity debate challenges.</p>
+          <h4>Oct. 2014 - Mar. 2018</h4>
+          <p>I was captain of the speech and debate club at my high school for two years. I supported coaches in leading a team of over sixty debaters. I designed and taught a yearlong course to introduce new debaters and fostered them throughout varsity debate challenges.</p>
         </td>
         </tr>
       </table>
@@ -71,10 +71,10 @@
       </table>
     </div>
     <div class="resume">
-      <p><strong>Math teams: </strong>Fairview math club since freshman year, Colorado math circle since eighth grade, Summit math team captain, and Colorado A2 math team for two years.</p>
+      <p><strong>Math: </strong>Colorado ARML Team 1, Colorado Galois Group Teacher, Fairview Math League, Summit Math Club.</p>
     </div>
     <div class="resume">
-      <p><strong>Computer skills: </strong>JavaScript, HTML, CSS, Java, Python, Microsoft Office, Wordpress</p>
+      <p><strong>Skills: </strong>JavaScript, HTML, CSS, Java, Python, Microsoft Office, Wordpress</p>
     </div>
 
     <h2 id="writing">Writing</h2>
