--- a/index.html
+++ b/index.html
@@ -295,6 +295,7 @@
       <li>A Walk to Remember</li>
       <li>The Princess Bride</li>
       <li>The Breakfast Club</li>
+      <li>The Greatest Showman</li>
     </ul>
     <h4>Dramas</h4>
     <ul>
