--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>Andrea's Website</title>
+  <title>Andrea Lin</title>
   <link rel="stylesheet" href="all.css">
 </head>
 
