--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
     </ul>
 
     <div class="contact-info">
-      <p><strong id="contact">Contact Me</strong> at (720) 518-8993 or andrealin2018@gmail.com.</p>
+      <p><strong id="contact">Contact Me</strong> at andrealin2018 [at] gmail [dot] com.</p>
     </div>
 
   </section>
