remove copyright and move contact to footer

--- a/index.html
+++ b/index.html
@@ -235,15 +235,12 @@
       <li>Once Upon a Time</li>
       <li>Once Upon a Time in Wonderland</li>
     </ul>
-
-    <div class="contact-info">
-      <p><strong id="contact">Contact Me</strong> at andrealin2018 [at] gmail [dot] com.</p>
-    </div>
-
   </section>
 
   <footer>
-    <p class="copyright">Copyright. Color scheme inspired by <a href="http://www.dtelepathy.com/blog/inspiration/beautiful-color-palettes-for-your-next-web-project">Secret Key</a>.</p>
+    <div class="contact-info">
+      <p><strong id="contact">Contact Me</strong> andrealin2018 [at] gmail [dot] com</p>
+    </div>
   </footer>
 
 </body>
