make links out of this domain open in new tabs

--- a/index.html
+++ b/index.html
@@ -22,17 +22,17 @@
 
   <section>
     <h2 id="aboutme">About Me</h2>
-    <p>Hi, I'm Andrea. I graduated from Fairview High School, and I will be attending MIT in the fall. Currently, I intern at <a href="http://phet.colorado.edu/">PhET Interactive Simulations</a>. There, I developed the <a href="https://phet.colorado.edu/sims/html/projectile-motion/latest/projectile-motion_en.html">projectile motion simulation</a>. I'm interested in policy debate, machine learning, geometry, and probability.</p>
-    <a href="https://github.com/andrea-phet">GitHub</a> | <a href="https://www.goodreads.com/user/show/51677921-andrea">Goodreads</a>
+    <p>Hi, I'm Andrea. I graduated from Fairview High School, and I will be attending MIT in the fall. Currently, I intern at <a href="http://phet.colorado.edu/" target="_blank">PhET Interactive Simulations</a>. There, I developed the <a href="https://phet.colorado.edu/sims/html/projectile-motion/latest/projectile-motion_en.html" target="_blank">projectile motion simulation</a>. I'm interested in policy debate, machine learning, geometry, and probability.</p>
+    <a href="https://github.com/andrea-phet" target="_blank">GitHub</a> | <a href="https://www.goodreads.com/user/show/51677921-andrea" target="_blank">Goodreads</a>
 
     <h2 id="experience">Experience</h2>
     <div class="resume">
       <table>
         <tr>
-        <td><a href="https://phet.colorado.edu"><img src="phet_logo.png" alt="PhET Logo"></a></td>
+        <td><a href="https://phet.colorado.edu" target="_blank"><img src="phet_logo.png" alt="PhET Logo"></a></td>
         <td>
           <h4>May. 2016 - Present</h4>
-          <p>In the summer before junior year, I began an internship at PhET, a project to create free interactive math and science simulations. As their first high school intern and student worker in QA and development, I initiated projects with the Director of Development, including pair programming on common libraries with lead developers, designing all sorts of algorithms from the geometry of a necklace to a cubic-solver, leading meetings and shared ideas through collaboration with designers, and networking on behalf of PhET at the International Society for Technology in Education 2016 conference. I am the lead developer on the physics simulation <a href="https://phet.colorado.edu/sims/html/projectile-motion/latest/projectile-motion_en.html">projectile motion</a>, which is published <a href="https://phet.colorado.edu/en/simulation/projectile-motion">here</a>. It teaches students about projectiles and trajectories, components of velocity, acceleration, forces, and drag.</p>
+          <p>In the summer before junior year, I began an internship at PhET, a project to create free interactive math and science simulations. As their first high school intern and student worker in QA and development, I initiated projects with the Director of Development, including pair programming on common libraries with lead developers, designing all sorts of algorithms from the geometry of a necklace to a cubic-solver, leading meetings and shared ideas through collaboration with designers, and networking on behalf of PhET at the International Society for Technology in Education 2016 conference. I am the lead developer on the physics simulation <a href="https://phet.colorado.edu/sims/html/projectile-motion/latest/projectile-motion_en.html" target="_blank">projectile motion</a>, which is published <a href="https://phet.colorado.edu/en/simulation/projectile-motion" target="_blank">here</a>. It teaches students about projectiles and trajectories, components of velocity, acceleration, forces, and drag.</p>
         </td>
         </tr>
       </table>
@@ -40,7 +40,7 @@
     <div class="resume">
       <table>
         <tr>
-        <td><a href="https://www.avistahospital.org/AVH/Home/"><img src="avista_logo.png" alt="Avista Logo"></a></td>
+        <td><a href="https://www.avistahospital.org/AVH/Home/" target="_blank"><img src="avista_logo.png" alt="Avista Logo"></a></td>
         <td>
           <h4>Jan. 2015 - May. 2018</h4>
           <p>As a volunteer at my local hospital in Louisville, Colorado, I worked at the Information Desk, Nutrition Services, and New Life. I brought a smile and offered my time for three to four hours each week to help with anything, including delivering dinner to patients' rooms, monitoring security through the front doors, and walking people to their rooms.</p>
@@ -51,7 +51,7 @@
     <div class="resume">
       <table>
         <tr>
-        <td><a href="https://www.fairviewhs.org/sites/debate"><img src="fairview_logo.png" alt="Fairview Logo"></a></td>
+        <td><a href="https://www.fairviewhs.org/sites/debate" target="_blank"><img src="fairview_logo.png" alt="Fairview Logo"></a></td>
         <td>
           <h4>Oct. 2014 - Mar. 2018</h4>
           <p>I was captain of the speech and debate club at my high school for two years. I supported coaches in leading a team of over sixty debaters. I designed and taught a yearlong course to introduce new debaters and fostered them throughout varsity debate challenges.</p>
@@ -62,7 +62,7 @@
     <div class="resume">
       <table>
         <tr>
-        <td><a href="http://www.colorado.edu/lab/hearlab/"><img src="hearing_logo.png" alt="Hearing Research Lab Logo"></a></td>
+        <td><a href="http://www.colorado.edu/lab/hearlab/" target="_blank"><img src="hearing_logo.png" alt="Hearing Research Lab Logo"></a></td>
         <td>
           <h4>Oct. 2015 - Apr. 2016</h4>
           <p>While I was a research student with the Hearing Research Lab, I developed a genetic algorithm with guidance from my mentor and the computer engineer at the lab to expand upon their study of hearing aids. I reached out to my Science Research Seminar teacher and peers for guidance in the research process and in presenting my findings. I took my project to the state science fair and won 2nd place in my category, as well as placing first in my category at the district science symposium.</p>
@@ -127,7 +127,7 @@
       <summary>Connections (Self-published novel in 2014)</summary>
       <p><strong>Connections by Andrea Lin</strong></p>
       <p class="left">Welcome to Connections. Harper looked past the flawless signpost and saw a perfect city. It was perfectly beautiful, perfectly natural, perfectly built, and had a perfect sense of sadness. Yes, sadness. As if it were envisioned by a sad heart, designed by sad, slightly shaking hands, and built by sad muscles. The city radiated perfectness and sadness. How did she know that? Why did Harper feel so connected and familiar yet foreign and strange to this city?</p>
-      <p>Order it on <a href="http://a.co/0FbCERi">Amazon</a></p>
+      <p>Order it on <a href="http://a.co/0FbCERi" target="_blank">Amazon</a></p>
     </details>
     <details>
       <summary>Wisp of Happiness (Memoir Poem for 5th Grade Graduation)</summary>
