revamp in progress: barebones

--- a/index.html
+++ b/index.html
@@ -7,183 +7,25 @@
 </head>
 
 <body>
-  <header>
-    <nav>
-      <a href=""><img src="home_icon.png" alt="Home Icon" width=30px></a>
-      <a href="#aboutme"> About Me </a>
-      <a href="#experience"> Experience </a>
-      <a href="#writing"> Writing </a>
-      <a href="#contact"> Contact </a>
-    </nav>
+  <h1>Andrea Lin</h1>
+  <p>a developer</p>
 
-    <h1><span>Andrea Lin</span></h1>
-  </header>
+  <h2>about</h2>
+  <p>Hi, I'm Andrea, and I'm a developer from Boulder, Colorado. Computer science is my passion, and I want to change the world through technology. I also love food and baking!</p>
 
-  <section>
-    <h2 id="aboutme">About Me</h2>
-    <p>Hi, I'm Andrea. I graduated from Fairview High School, and I will be attending MIT in the fall. Currently, I intern at <a href="http://phet.colorado.edu/" target="_blank">PhET Interactive Simulations</a>. There, I developed the <a href="https://phet.colorado.edu/sims/html/projectile-motion/latest/projectile-motion_en.html" target="_blank">projectile motion simulation</a>. I'm interested in policy debate, machine learning, geometry, and probability.</p>
-    <a href="https://github.com/andrea-phet" target="_blank">GitHub</a> | <a href="https://www.goodreads.com/user/show/51677921-andrea" target="_blank">Goodreads</a>
+  <h2>experience</h2>
+  <p>Massachusetts Institute of Technology: Undergraduate student</p>
+  <p>Fairview High School</p>
+  <p>PhET Interactive Simulations: Software Development Intern</p>
 
-    <h2 id="experience">Experience</h2>
-    <div class="resume">
-      <table>
-        <tr>
-        <td><a href="https://phet.colorado.edu" target="_blank"><img src="phet_logo.png" alt="PhET Logo"></a></td>
-        <td>
-          <h4>May. 2016 - Present</h4>
-          <p>In the summer before junior year, I began an internship at PhET, a project to create free interactive math and science simulations. As their first high school intern and student worker in QA and development, I initiated projects with the Director of Development, including pair programming on common libraries with lead developers, designing all sorts of algorithms from the geometry of a necklace to a cubic-solver, leading meetings and shared ideas through collaboration with designers, and networking on behalf of PhET at the International Society for Technology in Education 2016 conference. I am the lead developer on the physics simulation <a href="https://phet.colorado.edu/sims/html/projectile-motion/latest/projectile-motion_en.html" target="_blank">projectile motion</a>, which is published <a href="https://phet.colorado.edu/en/simulation/projectile-motion" target="_blank">here</a>. It teaches students about projectiles and trajectories, components of velocity, acceleration, forces, and drag.</p>
-        </td>
-        </tr>
-      </table>
-    </div>
-    <div class="resume">
-      <table>
-        <tr>
-        <td><a href="https://www.avistahospital.org/AVH/Home/" target="_blank"><img src="avista_logo.png" alt="Avista Logo"></a></td>
-        <td>
-          <h4>Jan. 2015 - May. 2018</h4>
-          <p>As a volunteer at my local hospital in Louisville, Colorado, I worked at the Information Desk, Nutrition Services, and New Life. I brought a smile and offered my time for three to four hours each week to help with anything, including delivering dinner to patients' rooms, monitoring security through the front doors, and walking people to their rooms.</p>
-        </td>
-        </tr>
-      </table>
-    </div>
-    <div class="resume">
-      <table>
-        <tr>
-        <td><a href="https://www.fairviewhs.org/sites/debate" target="_blank"><img src="fairview_logo.png" alt="Fairview Logo"></a></td>
-        <td>
-          <h4>Oct. 2014 - Mar. 2018</h4>
-          <p>I was captain of the speech and debate club at my high school for two years. I supported coaches in leading a team of over sixty debaters. I designed and taught a yearlong course to introduce new debaters and fostered them throughout varsity debate challenges.</p>
-        </td>
-        </tr>
-      </table>
-    </div>
-    <div class="resume">
-      <table>
-        <tr>
-        <td><a href="http://www.colorado.edu/lab/hearlab/" target="_blank"><img src="hearing_logo.png" alt="Hearing Research Lab Logo"></a></td>
-        <td>
-          <h4>Oct. 2015 - Apr. 2016</h4>
-          <p>While I was a research student with the Hearing Research Lab, I developed a genetic algorithm with guidance from my mentor and the computer engineer at the lab to expand upon their study of hearing aids. I reached out to my Science Research Seminar teacher and peers for guidance in the research process and in presenting my findings. I took my project to the state science fair and won 2nd place in my category, as well as placing first in my category at the district science symposium.</p>
-        </td>
-        </tr>
-      </table>
-    </div>
-    <div class="resume">
-      <p><strong>Math: </strong>Colorado ARML Team 1, Colorado Galois Group Teacher, Fairview Math League, Summit Math Club.</p>
-    </div>
-    <div class="resume">
-      <p><strong>Skills: </strong>JavaScript, HTML, CSS, Java, Python, Microsoft Office, Wordpress</p>
-    </div>
+  <h2>skills</h2>
+  <p>Languages: JavaScript, Python, Java, HTML, CSS</p>
+  <p>Tools: Atom, WebStorm, Sublime Text, macOS, Chrome DevTools</p>
 
-    <h2 id="writing">Writing</h2>
-    <details>
-      <summary>The Masquerade (Short Story for PIB LA 9)</summary>
-      <p><strong>The Masquerade</strong></p>
-      <div class="tab">
-        <p>“Heyyy Lillian!” A pebble hit Lillian’s window with a plink, and she groaned. Easton Hammel had been constantly bothering her about what she was wearing to the ball, even after she had refused to tell him. She and Easton had been best friends since they were toddlers, and there was never a secret she kept from him. This time, however, was different.</p>
-        <p>The richest girl in town, Daisy Delamarte, had invited Lillian to the annual ball that was held in North Abbington. Everyone in the town Abbington knew Lillian as the first half of LillianandEaston, since they were always together. This time, she wanted to escape her identity and be someone other than the-poor-farmer’s-girl-who-was-always-with-the-poor- blacksmith’s-son.</p>
-        <p>Another plink came. Lillian yanked open the window and shouted below: “No, I TOLD you already! I’m keeping my dress a secret!”</p>
-        <p>Easton put his hands up and opened his mouth in mock surprise. “Whoah there! I’ve just an announcement.” Easton made a grand gesture of clearing his throat, and then said in a high pitched voice, “This year’s ball has been changed into a masquerade, so please dress accordingly.”</p>
-        <p>Lillian’s heart pounded with the possibilities. A masked ball was the perfect chance to hide her identity. And it would be an especially good chance to shake off Easton’s company. Lillian normally felt comfortable spending time with him, unless they were in a public area. Easton gave off the vibe of a silly boy from the South Abbington streets everywhere he walked.</p>
-        <p>It was a chance to finally hang out with the Delamartes and North Abbington neighbors as one of the them. The rich ones. Her mind filled with images of her dancing, laughing, her hair waving in the glimmer of the lights, with her arms lazily around a rich gentleman’s neck…</p>
-        <p>She was already going to wear her mother’s white dress and add some party trinkets to tone down the wedding air. But now that it was a masquerade, she could turn the dress into an angel costume! No toning down for an angel would be needed.</p>
-        <p>To get an inexpensive but still elegant mask, Lillian turned to the flea market in the very south of South Abbington. She found a beautiful mask that was strikingly white with creamy pearls. It was neither comfortable nor cheap, but it was worth it. It was perfect for her since it covered almost all of her face, and it was perfect for an angel.</p>
-        <p>When the sky darkened, Lillian carefully tucked her costume into a purse and headed for the blacksmith’s shop.  Easton was already waiting outside. Together, they walked to North Abbington.</p>
-        <p>The Delamarte palace was beautiful all year, but tonight it was especially highlighted. Lights illuminated every Delamarte family crest hanging from the towers; mini lamps lined the stone pathways; and beautiful violin music surrounded the lawn. Flowers hung over every archway and the servants were all dressed in fine phoenix costumes.</p>
-        <p>“Easton? I’m going to leave to change, alright? I’ll see you in there.”</p>
-        <p>Easton nodded eagerly. “Go ahead! And don’t get too crazy--we’ve got to be back by eleven.” With that, he bounded off.</p>
-        <p>Lillian frowned. Why didn’t Easton pester her about her costume? She shrugged. Fewer lies to fabricate.</p>
-        <p>She went into a small changing tent to put on her costume. The mask pinched her nose even more than it did when she was trying it at the market. Feeling rather naked and new-born in her angel costume, she made her way back to the glowing palace.</p>
-        <p>Lillian took a deep breath, adjusted her mask, and stepped through the gold doors. She was confronted by a flurry of masks and dancers -- bears, pegasi, phoenixes, cats, mermaids… It was overwhelming. She spotted some people from Southern Abbington in the corner, recognizing them by their worn out boots. She almost headed over there, but then she remembered. Tonight she wouldn’t be Lillian. She would be the rich guest of the Delamartes.</p>
-        <p>There were couples all around Lillian that were chatting with each other as they danced to the trumpet - filled spritely tune. Lillian saw animated lips under black cat masks, twinkling eyes shining through the eyelashes of a horse mask, and bare shoulders shaking all around. All of this made Lillian feel uncomfortably alone.</p>
-        <p>“Mademoiselle? Would you like to dance with me?”</p>
-        <p>Lillian turned around and almost let out a gasp. The finest gentleman in the entire ballroom had his waist bowed down, questioning eyes looking up at her through his beautiful stallion mask. Shiny leather boots, white trousers made of the finest material, and a dark black jacket only the Delamartes and their company would wear. Silver buttons. One. Two. Three.</p>
-        <p>Lillian took a deep breath, composed herself, and let out the line she had practiced so many times.“Why, of course!” It came out much higher and squeakier than she had expected, and her heart fell. This gentleman would be sure to notice her mistake. Lillian ‘s hands shook and she felt her palms go clammy and cold as she grasped hands with the gentleman. Her mask slipped a little, but she didn’t dare fix it.</p>
-        <p>“How shall I address you, mademoiselle?”</p>
-        <p>Lillian panicked. If she told him her name he might recognize her as the poor Lillian from South Abbington.</p>
-        <p>“I understand that you may not want to make your name known so easily at a masquerade. I am the same.” He leaned in closer and whispered, “I am going by Romeo, so would you kindly go by Juliet?”</p>
-        <p>Lillian nodded.</p>
-        <p>As he led her waltzing through the dancers, she realized with the jump in a heart where they were heading. The group with ladies dressed in white and gentlemen dressed in earth colors would definitely be The Delamartes. No wonder Romeo came up to her. She had, by chance, worn the exact dress that would let her fit in with the Delamartes. As she got closer, Lillian expected to feel glorious and successful as people looked at her with awe and realized she was part of the elite. However, she didn’t feel the glory. She simply felt scared, and slightly hysterical.</p>
-        <p>They moved into the Delamartes’ circle.</p>
-        <p>The trumpeters finished their song. The servants went around the ballroom and blew the candles out, one by one. The only light remaining came from the central chandelier. A dark cello melody rumbled across the hall. In the dark, Lillian stumbled, and her feet gave away from under her.</p>
-        <p>The chandelier tumbled amongst shiny sequins and lips and eyes and candles and buttons and masks… A stallion.</p>
-        <p>“Are you alright, my lady?” Romeo said.</p>
-        <p>“Uh...” Lillian said dizzily. Her masked had slipped, painfully covering her right eye.</p>
-        <p>“Juliet,” Romeo said smoothly, “Let me adjust your beautiful mask.”</p>
-        <p>Lillian immediately pulled back. “No, oh no, no need.” She took a breath, composed herself, and lifted her chin. “I shall do it myself.”</p>
-        <p>Heart pounding, she turned away, shifted the mask, and blinked tears out of her eyes.</p>
-        <p>Lillian counted eleven chimes of the clock. Easton said they should have left by now, but she was still stuck in Romeo’s arms, dancing. Lillian bit her lip. What if Easton left without her?</p>
-        <p>“I will get you something to drink.” Romeo suddenly said. With that, he bowed and left. At this lucky chance, Lillian ducked out of the Delamartes and headed out the palace. Romeo would have to give that drink to someone else.</p>
-        <p>Lillian rushed along the cobble-stoned streets, panting loudly. Her high heels pattering against the quite stones were claps of thunder to her sensitive ears. She yanked off her angel mask and moaned at the relief. She was already late, so she decided not to take her costume off. She’d have to hope Easton didn’t notice an angel-dressed “lady” dancing with the Delamartes.</p>
-        <p>Lillian actually couldn’t wait to see him. She needed someone to pour the whole truth to. Someone whom she could tell about how she tried to act like a rich girs but failed miserably. How she thought she’d have a better life spent away from her poor but familiar friends. How she felt so uptight and ready to cry having to fake everything in front of the Delamartes. Lillian really needed her best friend right now.</p>
-        <p>He was already waiting for her next to the carriage, elbow against the door, face red. He must have been running late as well.</p>
-        <p>“Easton! I’m so glad--” Lillian stopped sharply. Leather boots. A black jacket. Silver buttons, one, two, three. A stallion mask in his left hand. How did she not recognize him?</p>
-        <p>“Romeo,” she whispered in disbelief.</p>
-      </div>
-    </details>
-    <details>
-      <summary>Connections (Self-published novel in 2014)</summary>
-      <p><strong>Connections by Andrea Lin</strong></p>
-      <p class="left">Welcome to Connections. Harper looked past the flawless signpost and saw a perfect city. It was perfectly beautiful, perfectly natural, perfectly built, and had a perfect sense of sadness. Yes, sadness. As if it were envisioned by a sad heart, designed by sad, slightly shaking hands, and built by sad muscles. The city radiated perfectness and sadness. How did she know that? Why did Harper feel so connected and familiar yet foreign and strange to this city?</p>
-      <p>Order it on <a href="http://a.co/0FbCERi" target="_blank">Amazon</a></p>
-    </details>
-    <details>
-      <summary>Wisp of Happiness (Memoir Poem for 5th Grade Graduation)</summary>
-      <p><strong>Wisp of Happiness</strong></p>
-      <p>By Andrea</p>
-      <p>There was once this time,<br>
-        In my life, of my life,<br>
-        Far back in my past.<br>
-        It was a simple moment,<br>
-        A sliver, a scrap,<br>
-        Of pure happiness.<br>
-        <br>
-        That was hope.<br>
-        It’s a streak of sun,<br>
-        Across my life of simple shades of moonlight.<br>
-        A blur of light,<br>
-        Stretching over the timeline of my life,<br>
-        For how long I can not say.<br>
-        <br>
-        So long ago it seems,<br>
-        That I’d felt that warmth,<br>
-        Of the joyous sparkle.<br>
-        Yet time didn’t matter,<br>
-        In that golden period.<br>
-        It simply was.<br>
-        <br>
-        It is my longing to relive that streak,<br>
-        Of golden sun.<br>
-        The hope of going back to the a blur of light,<br>
-        Dwells permanently in my dreams.<br>
-        My quest is to retrieve,<br>
-        That sprinkle of joyous sparkle.<br>
-        <br>
-        It’s natural to want.<br>
-        To ache for more periods of pure white light,<br>
-        Are quite desperate dreams for all.<br>
-        I not only wish to spread it on life,<br>
-        But to search the source.<br>
-        The source of that unclouded daffodil mist.<br>
-        <br>
-        Only the idea that a decade would have given that moment,<br>
-        Enough time to disappear, to deny existence.<br>
-        With hope if it shall have survived,<br>
-        Would my sight see it;<br>
-        Would my outstretched hands,<br>
-        Grasp that wisp,<br>
-        <br>
-        Of happiness?</p>
-    </details>
-  </section>
+  <h2>works</h2>
+  Coming soon
 
-  <footer>
-    <div class="contact-info">
-      <p><strong id="contact">Contact Me</strong> andrealin2018 [at] gmail [dot] com</p>
-    </div>
-  </footer>
-
+  <h2>contact</h2>
+  <p>andrealin2018 [at] gmail [dot] com</p>
 </body>
-
 </html>
