--- a/index.html
+++ b/index.html
@@ -7,22 +7,24 @@
 </head>
 
 <body>
-  <h1>Andrea Lin</h1>
-  <p>a developer</p>
+  <div class="px-5">
+    <h1>Andrea Lin</h1>
+    <p>a developer</p>
 
-  <h2>about</h2>
-  <p>Hi, I'm Andrea, and I'm a developer from Boulder, Colorado. Computer science is my passion, and I want to change the world through technology. I also love food and baking!</p>
+    <h2>about</h2>
+    <p>Hi, I'm Andrea, and I'm a developer from Boulder, Colorado. Computer science is my passion, and I want to change the world through technology. I also love food and baking!</p>
 
-  <h2>experience</h2>
-  <p>Massachusetts Institute of Technology</p>
-  <p>Fairview High School</p>
-  <p>PhET Interactive Simulations</p>
+    <h2>experience</h2>
+    <p>Massachusetts Institute of Technology</p>
+    <p>Fairview High School</p>
+    <p>PhET Interactive Simulations</p>
 
-  <h2>skills</h2>
-  <p>Languages: JavaScript, Python, Java, HTML, CSS</p>
-  <p>Tools: Atom, WebStorm, Sublime Text, macOS, Chrome DevTools</p>
+    <h2>skills</h2>
+    <p>Languages: JavaScript, Python, Java, HTML, CSS</p>
+    <p>Tools: Atom, WebStorm, Sublime Text, macOS, Chrome DevTools</p>
 
-  <h2>contact</h2>
-  <p>andrealin2018 [at] gmail [dot] com</p>
+    <h2>contact</h2>
+    <p>andrealin2018 [at] gmail [dot] com</p>
+  </div>
 </body>
 </html>
