Add links to GitHub, LinkedIn, Goodreads. Education details.

--- a/index.html
+++ b/index.html
@@ -13,11 +13,16 @@
 
     <h2>about</h2>
     <p>Hi, I'm Andrea, and I'm a developer from Boulder, Colorado. Computer science is my passion, and I want to change the world through technology. I also love food and baking!</p>
+    <p>
+      <a href="https://github.com/andrealin">GitHub</a> |
+      <a href="https://www.linkedin.com/in/andrea-l-041394120">LinkedIn</a> |
+      <a href="https://www.goodreads.com/user/show/51677921-andrea">Goodreads</a>
+    </p>
 
     <h2>experience</h2>
-    <p>Massachusetts Institute of Technology</p>
-    <p>Fairview High School</p>
-    <p>PhET Interactive Simulations</p>
+    <p>Massachusetts Institute of Technology: Starting Fall 2018</p>
+    <p>PhET Interactive Simulations: Software Development Intern May 2016 - Present</p>
+    <p>Fairview High School: Graduated May 2018</p>
 
     <h2>skills</h2>
     <p>Languages: JavaScript, Python, Java, HTML, CSS</p>
