--- a/index.html
+++ b/index.html
@@ -1,35 +1,48 @@
+<!-- DOCTYPE -->
 <!DOCTYPE html>
-<html>
-<head>
-  <title>Andrea Lin</title>
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
-  <link rel="stylesheet" href="all.css">
-</head>
+<html lang="en">
+  <head>
+    <title>Andrea Lin</title>
+    <meta charset="utf-8">
+    <!-- Viewport Meta Tag -->
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <!-- Bootstrap CSS -->
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+  </head>
+  <body>
 
-<body>
-  <div class="container">
-    <h1>Andrea Lin</h1>
-    <p>a developer</p>
+    <div class="container">
+      <h1>Andrea Lin</h1>
 
-    <h2>about</h2>
-    <p>Hi, I'm Andrea, and I'm a developer from Boulder, Colorado. Computer science is my passion, and I want to change the world through technology. I also love food and baking!</p>
-    <p>
-      <a href="https://github.com/andrealin">GitHub</a> |
-      <a href="https://www.linkedin.com/in/andrea-l-041394120">LinkedIn</a> |
-      <a href="https://www.goodreads.com/user/show/51677921-andrea">Goodreads</a>
-    </p>
+      <h2>about</h2>
+      <p>Hi, I'm Andrea. I'm a developer from Boulder, Colorado. Computer science is my passion, and I want to change the world through technology. I also love food and baking!</p>
+      <p>
+        <a href="https://github.com/andrealin">GitHub</a> |
+        <a href="https://www.linkedin.com/in/andrea-l-041394120">LinkedIn</a> |
+        <a href="https://www.goodreads.com/user/show/51677921-andrea">Goodreads</a>
+      </p>
 
-    <h2>experience</h2>
-    <p>Massachusetts Institute of Technology: Starting Fall 2018</p>
-    <p>PhET Interactive Simulations: Software Development Intern May 2016 - Present</p>
-    <p>Fairview High School: Graduated May 2018</p>
+      <h2>experience</h2>
+      <p>Massachusetts Institute of Technology: Starting Fall 2018</p>
+      <p>PhET Interactive Simulations: Software Development Intern May 2016 - Present</p>
+      <p>Fairview High School: Graduated May 2018</p>
 
-    <h2>skills</h2>
-    <p>Languages: JavaScript, Python, Java, HTML, CSS</p>
-    <p>Tools: Atom, WebStorm, Sublime Text, macOS, Chrome DevTools</p>
+      <h2>skills</h2>
+      <p>Languages: JavaScript, Python, Java, HTML, CSS</p>
+      <p>Tools: Atom, WebStorm, Sublime Text, macOS, Chrome DevTools</p>
 
-    <h2>contact</h2>
-    <p>andrealin2018 [at] gmail [dot] com</p>
-  </div>
-</body>
+      <h2>contact</h2>
+      <p>andrealin2018 [at] gmail [dot] com</p>
+    </div>
+
+    <!-- JavaScript: placed at the end of the document so the pages load faster -->
+		<!-- jQuery library -->
+		<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+
+		<!-- Popper -->
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+
+		<!-- Latest compiled and minified Bootstrap JavaScript -->
+		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+  </body>
 </html>
