update tagline and summary

--- a/index.html
+++ b/index.html
@@ -13,14 +13,13 @@
 
     <div class="container">
       <h1>Andrea Lin</h1>
-
-      <h2>about</h2>
-      <p>Hi, I'm Andrea. I'm a developer from Boulder, Colorado. Computer science is my passion, and I want to change the world through technology. I also love food and baking!</p>
+      <p>Developer from Boulder, Colorado
       <p>
         <a href="https://github.com/andrealin">GitHub</a> |
         <a href="https://www.linkedin.com/in/andrea-l-041394120">LinkedIn</a> |
         <a href="https://www.goodreads.com/user/show/51677921-andrea">Goodreads</a>
       </p>
+      <p>Hi, I'm Andrea, and I intern at <a href="https://phet.colorado.edu">PhET Interactive Simulations</a> based in University of Colorado Boulder! Computer science is my passion, and I want to change the world through technology. I also love food and baking!</p>
 
       <h2>experience</h2>
       <p>Massachusetts Institute of Technology: Starting Fall 2018</p>
