add works, add projectile motion

--- a/index.html
+++ b/index.html
@@ -26,6 +26,17 @@
       <p>PhET Interactive Simulations: Software Development Intern May 2016 - Present</p>
       <p>Fairview High School: Graduated May 2018</p>
 
+      <h2>works</h2>
+      <h3>Projectile Motion</h3>
+      <p><a href="https://phet.colorado.edu/sims/html/projectile-motion/latest/projectile-motion_en.html">
+        <img src="projectile-motion-screenshot.png" alt="Projectile Motion Screenshot" width=300>
+      </a></p>
+      <p>Projectile Motion is a free online educational computer program that allows students to interactively explore the physics of 2D motion. In fall of 2017, I published Projectile Motion with PhET, a project based in University of Colorado Boulder to create free interactive math and science simulations. The simulation has been translated by volunteers around the world into over 25 languages and used by students and teachers close to a million times.</p>
+      <p>
+        <a href="https://github.com/phetsims/projectile-motion">GitHub repo</a> |
+        <a href="https://phet.colorado.edu/en/simulation/projectile-motion">Publication page</a> |
+        <a href="https://phet.colorado.edu/sims/html/projectile-motion/latest/projectile-motion_en.html">See it!!!</a>
+      </p>
       <h2>skills</h2>
       <p>Languages: JavaScript, Python, Java, HTML, CSS</p>
       <p>Tools: Atom, WebStorm, Sublime Text, macOS, Chrome DevTools</p>
